--- a/cau04.ipynb
+++ b/cau04.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,188 +12,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {
     "scrolled": true
    },
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
       "(8123, 23)\n"
      ]
     },
     {
+     "output_type": "execute_result",
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>p</th>\n",
-       "      <th>x</th>\n",
-       "      <th>s</th>\n",
-       "      <th>n</th>\n",
-       "      <th>t</th>\n",
-       "      <th>p.1</th>\n",
-       "      <th>f</th>\n",
-       "      <th>c</th>\n",
-       "      <th>n.1</th>\n",
-       "      <th>k</th>\n",
-       "      <th>...</th>\n",
-       "      <th>s.2</th>\n",
-       "      <th>w</th>\n",
-       "      <th>w.1</th>\n",
-       "      <th>p.2</th>\n",
-       "      <th>w.2</th>\n",
-       "      <th>o</th>\n",
-       "      <th>p.3</th>\n",
-       "      <th>k.1</th>\n",
-       "      <th>s.3</th>\n",
-       "      <th>u</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>e</td>\n",
-       "      <td>x</td>\n",
-       "      <td>s</td>\n",
-       "      <td>y</td>\n",
-       "      <td>t</td>\n",
-       "      <td>a</td>\n",
-       "      <td>f</td>\n",
-       "      <td>c</td>\n",
-       "      <td>b</td>\n",
-       "      <td>k</td>\n",
-       "      <td>...</td>\n",
-       "      <td>s</td>\n",
-       "      <td>w</td>\n",
-       "      <td>w</td>\n",
-       "      <td>p</td>\n",
-       "      <td>w</td>\n",
-       "      <td>o</td>\n",
-       "      <td>p</td>\n",
-       "      <td>n</td>\n",
-       "      <td>n</td>\n",
-       "      <td>g</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>e</td>\n",
-       "      <td>b</td>\n",
-       "      <td>s</td>\n",
-       "      <td>w</td>\n",
-       "      <td>t</td>\n",
-       "      <td>l</td>\n",
-       "      <td>f</td>\n",
-       "      <td>c</td>\n",
-       "      <td>b</td>\n",
-       "      <td>n</td>\n",
-       "      <td>...</td>\n",
-       "      <td>s</td>\n",
-       "      <td>w</td>\n",
-       "      <td>w</td>\n",
-       "      <td>p</td>\n",
-       "      <td>w</td>\n",
-       "      <td>o</td>\n",
-       "      <td>p</td>\n",
-       "      <td>n</td>\n",
-       "      <td>n</td>\n",
-       "      <td>m</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>p</td>\n",
-       "      <td>x</td>\n",
-       "      <td>y</td>\n",
-       "      <td>w</td>\n",
-       "      <td>t</td>\n",
-       "      <td>p</td>\n",
-       "      <td>f</td>\n",
-       "      <td>c</td>\n",
-       "      <td>n</td>\n",
-       "      <td>n</td>\n",
-       "      <td>...</td>\n",
-       "      <td>s</td>\n",
-       "      <td>w</td>\n",
-       "      <td>w</td>\n",
-       "      <td>p</td>\n",
-       "      <td>w</td>\n",
-       "      <td>o</td>\n",
-       "      <td>p</td>\n",
-       "      <td>k</td>\n",
-       "      <td>s</td>\n",
-       "      <td>u</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>e</td>\n",
-       "      <td>x</td>\n",
-       "      <td>s</td>\n",
-       "      <td>g</td>\n",
-       "      <td>f</td>\n",
-       "      <td>n</td>\n",
-       "      <td>f</td>\n",
-       "      <td>w</td>\n",
-       "      <td>b</td>\n",
-       "      <td>k</td>\n",
-       "      <td>...</td>\n",
-       "      <td>s</td>\n",
-       "      <td>w</td>\n",
-       "      <td>w</td>\n",
-       "      <td>p</td>\n",
-       "      <td>w</td>\n",
-       "      <td>o</td>\n",
-       "      <td>e</td>\n",
-       "      <td>n</td>\n",
-       "      <td>a</td>\n",
-       "      <td>g</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>e</td>\n",
-       "      <td>x</td>\n",
-       "      <td>y</td>\n",
-       "      <td>y</td>\n",
-       "      <td>t</td>\n",
-       "      <td>a</td>\n",
-       "      <td>f</td>\n",
-       "      <td>c</td>\n",
-       "      <td>b</td>\n",
-       "      <td>n</td>\n",
-       "      <td>...</td>\n",
-       "      <td>s</td>\n",
-       "      <td>w</td>\n",
-       "      <td>w</td>\n",
-       "      <td>p</td>\n",
-       "      <td>w</td>\n",
-       "      <td>o</td>\n",
-       "      <td>p</td>\n",
-       "      <td>k</td>\n",
-       "      <td>n</td>\n",
-       "      <td>g</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5 rows × 23 columns</p>\n",
-       "</div>"
-      ],
       "text/plain": [
        "   p  x  s  n  t p.1  f  c n.1  k  ... s.2  w w.1 p.2 w.2  o p.3 k.1 s.3  u\n",
        "0  e  x  s  y  t   a  f  c   b  k  ...   s  w   w   p   w  o   p   n   n  g\n",
@@ -203,35 +36,29 @@
        "4  e  x  y  y  t   a  f  c   b  n  ...   s  w   w   p   w  o   p   k   n  g\n",
        "\n",
        "[5 rows x 23 columns]"
-      ]
+      ],
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>p</th>\n      <th>x</th>\n      <th>s</th>\n      <th>n</th>\n      <th>t</th>\n      <th>p.1</th>\n      <th>f</th>\n      <th>c</th>\n      <th>n.1</th>\n      <th>k</th>\n      <th>...</th>\n      <th>s.2</th>\n      <th>w</th>\n      <th>w.1</th>\n      <th>p.2</th>\n      <th>w.2</th>\n      <th>o</th>\n      <th>p.3</th>\n      <th>k.1</th>\n      <th>s.3</th>\n      <th>u</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>e</td>\n      <td>x</td>\n      <td>s</td>\n      <td>y</td>\n      <td>t</td>\n      <td>a</td>\n      <td>f</td>\n      <td>c</td>\n      <td>b</td>\n      <td>k</td>\n      <td>...</td>\n      <td>s</td>\n      <td>w</td>\n      <td>w</td>\n      <td>p</td>\n      <td>w</td>\n      <td>o</td>\n      <td>p</td>\n      <td>n</td>\n      <td>n</td>\n      <td>g</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>e</td>\n      <td>b</td>\n      <td>s</td>\n      <td>w</td>\n      <td>t</td>\n      <td>l</td>\n      <td>f</td>\n      <td>c</td>\n      <td>b</td>\n      <td>n</td>\n      <td>...</td>\n      <td>s</td>\n      <td>w</td>\n      <td>w</td>\n      <td>p</td>\n      <td>w</td>\n      <td>o</td>\n      <td>p</td>\n      <td>n</td>\n      <td>n</td>\n      <td>m</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>p</td>\n      <td>x</td>\n      <td>y</td>\n      <td>w</td>\n      <td>t</td>\n      <td>p</td>\n      <td>f</td>\n      <td>c</td>\n      <td>n</td>\n      <td>n</td>\n      <td>...</td>\n      <td>s</td>\n      <td>w</td>\n      <td>w</td>\n      <td>p</td>\n      <td>w</td>\n      <td>o</td>\n      <td>p</td>\n      <td>k</td>\n      <td>s</td>\n      <td>u</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>e</td>\n      <td>x</td>\n      <td>s</td>\n      <td>g</td>\n      <td>f</td>\n      <td>n</td>\n      <td>f</td>\n      <td>w</td>\n      <td>b</td>\n      <td>k</td>\n      <td>...</td>\n      <td>s</td>\n      <td>w</td>\n      <td>w</td>\n      <td>p</td>\n      <td>w</td>\n      <td>o</td>\n      <td>e</td>\n      <td>n</td>\n      <td>a</td>\n      <td>g</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>e</td>\n      <td>x</td>\n      <td>y</td>\n      <td>y</td>\n      <td>t</td>\n      <td>a</td>\n      <td>f</td>\n      <td>c</td>\n      <td>b</td>\n      <td>n</td>\n      <td>...</td>\n      <td>s</td>\n      <td>w</td>\n      <td>w</td>\n      <td>p</td>\n      <td>w</td>\n      <td>o</td>\n      <td>p</td>\n      <td>k</td>\n      <td>n</td>\n      <td>g</td>\n    </tr>\n  </tbody>\n</table>\n<p>5 rows × 23 columns</p>\n</div>"
      },
-     "execution_count": 16,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 2
     }
    ],
    "source": [
-    "df = pd.read_csv(\"data\\mushroom.data\")\n",
+    "df = pd.read_csv(\"mushroom.data\")\n",
     "print(df.shape)\n",
     "df.head(5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
-      "[['x' 's' 'y' 't' 'a' 'f' 'c' 'b' 'k' 'e' 'c' 's' 's' 'w' 'w' 'p' 'w' 'o'\n",
-      "  'p' 'n' 'n']\n",
-      " ['b' 's' 'w' 't' 'l' 'f' 'c' 'b' 'n' 'e' 'c' 's' 's' 'w' 'w' 'p' 'w' 'o'\n",
-      "  'p' 'n' 'n']\n",
-      " ['x' 'y' 'w' 't' 'p' 'f' 'c' 'n' 'n' 'e' 'e' 's' 's' 'w' 'w' 'p' 'w' 'o'\n",
-      "  'p' 'k' 's']]\n",
-      "['e' 'e' 'p']\n"
+      "[['x' 's' 'y' 't' 'a' 'f' 'c' 'b' 'k' 'e' 'c' 's' 's' 'w' 'w' 'p' 'w' 'o'\n  'p' 'n' 'n']\n ['b' 's' 'w' 't' 'l' 'f' 'c' 'b' 'n' 'e' 'c' 's' 's' 'w' 'w' 'p' 'w' 'o'\n  'p' 'n' 'n']\n ['x' 'y' 'w' 't' 'p' 'f' 'c' 'n' 'n' 'e' 'e' 's' 's' 'w' 'w' 'p' 'w' 'o'\n  'p' 'k' 's']]\n['e' 'e' 'p']\n"
      ]
     }
    ],
@@ -245,21 +72,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
-      "[[5 2 9 ... 4 3 2]\n",
-      " [0 2 8 ... 4 3 2]\n",
-      " [5 3 8 ... 4 2 3]\n",
-      " ...\n",
-      " [2 2 4 ... 4 0 1]\n",
-      " [3 3 4 ... 0 7 4]\n",
-      " [5 2 4 ... 4 4 1]]\n",
-      "[0 0 1 ... 0 1 0]\n"
+      "[[5 2 9 ... 4 3 2]\n [0 2 8 ... 4 3 2]\n [5 3 8 ... 4 2 3]\n ...\n [2 2 4 ... 4 0 1]\n [3 3 4 ... 0 7 4]\n [5 2 4 ... 4 4 1]]\n[0 0 1 ... 0 1 0]\n"
      ]
     }
    ],
@@ -276,15 +96,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
-      "(6498, 21) (6498,)\n",
-      "(1625, 21) (1625,)\n"
+      "(6498, 21) (6498,)\n(1625, 21) (1625,)\n"
      ]
     }
    ],
@@ -297,19 +116,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
-      "y_pred:\n",
-      " [0 1 1 ... 0 0 0]\n",
-      "y_true:\n",
-      " [0 1 1 ... 0 0 0]\n",
-      "acurracy:\n",
-      " 0.9981538461538462\n"
+      "y_pred:\n [0 1 1 ... 0 0 0]\ny_true:\n [0 1 1 ... 0 0 0]\nacurracy:\n 0.9981538461538462\n"
      ]
     }
    ],
@@ -331,19 +145,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
-      "predict:\n",
-      " [0 1 1 ... 0 1 0]\n",
-      "y_true:\n",
-      " [0 1 1 ... 0 0 0]\n",
-      "acurracy:\n",
-      " 0.9587692307692308\n"
+      "predict:\n [0 1 1 ... 0 1 0]\ny_true:\n [0 1 1 ... 0 0 0]\nacurracy:\n 0.9587692307692308\n"
      ]
     }
    ],
@@ -425,7 +234,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.7.4-final"
   }
  },
  "nbformat": 4,
